# fst

./: Cargo.toml  README.org
benches/: cli_bench.rs
src/: main.rs  operations.rs  regex.rs
src/regex/: matcher.rs  mod.rs  nfa.rs  utils.rs
src/regex/state_machine/: builder.rs  machine.rs  mod.rs
tests/: cli_test.rs
