[package]
name = "fst"
version = "0.1.0"
authors = ["Magnus N Malmquist <magnusnym97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
ansi_term = "0.12.1"
walkdir = "2"

[dev-dependencies]
assert_cmd = "1.0.5"
tempfile = "3"
